reset: establish clean baseline (backend app, single compose, settings)
- Added backend/main.py FastAPI app with /health, /status, /report stubs
- Added settings.json for version/env config
- Added requirements.txt with FastAPI + Uvicorn
- Added Dockerfile for containerized API
- Added single root docker-compose.yml for Portainer
- Added .gitignore for venv/cache/data
- Added README.md with usage + Portainer deployment notes
- Cleaned up old compose files, frontend placeholder, and venv caches

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,17 @@
 # Python
 __pycache__/
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
+
+# Envs
+.venv/
 .env
-venv/
-env/
+.env.*
 
-# Node
-node_modules/
-
-# Local runs & artifacts
-/runs/
-/tmp/
-/*.log
-
-# Editors
+# OS/editor
+.DS_Store
 .vscode/
 
-# Mac
-.DS_Store
+# App data
+aio-data/
